--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,36 +4,77 @@
 <head>
     <meta charset="UTF-8">
     <title>Login page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+          crossorigin="anonymous">
 </head>
 <body>
+<div class="container text-center">
     <div>
-        <form th:method="POST" th:action="@{/registration}" th:object="${user}">
-            <label for="name">Enter name: </label>
-            <input type="text" th:field="*{firstName}" id="name" />
-            <br/>
-            <label for="lastname">Last name: </label>
-            <input type="text" th:field="*{lastName}" id="lastname" />
-            <br/>
-            <label for="email">E-mail: </label>
-            <input type="text" th:field="*{email}" id="email" />
-            <br/>
-            <label for="username">Username: </label>
-            <input type="text" th:field="*{username}" id="username" />
-            <br/>
-            <label for="password">Password: </label>
-            <input type="password" th:field="*{password}" id="password" />
-            <br/>
-            <label for="passwordconfirm">Password confirm: </label>
-            <input type="password" th:field="*{passwordConfirm}" id="passwordconfirm" />
-            <br/>
-            <label for="confirm">Create admin user</label>
-            <input type="checkbox" id="confirm" th:name="confirm" th:checked="*{confirm}" />
-            <br/>
-            <input type="submit" value="Add user"/>
-        </form>
-
+        <h1>Sign UP</h1>
     </div>
+    <form th:method="POST" th:action="@{/registration}" th:object="${user}"
+          style="max-width: 300px; margin: 0 auto;">
+        <div class="m-3">
+            <div>
+                <label for="name">First name: </label>
+                <div>
+                    <input class="form-control" type="text" th:field="*{firstName}" id="name"/>
+                </div>
+            </div>
+            <div>
+                <label for="lastname">Last name: </label>
+                <div>
+                    <input class="form-control" type="text" th:field="*{lastName}" id="lastname"/>
+                </div>
+            </div>
+            <div>
+                <label for="email">E-mail: </label>
+                <div>
+                    <input class="form-control" type="text" th:field="*{email}" id="email"/>
+                </div>
+            </div>
+            <div>
+                <label for="username">Username: </label>
+                <div>
+                    <input class="form-control" type="text" th:field="*{username}" id="username"/>
+                </div>
+            </div>
+            <div>
+                <label for="password">Password: </label>
+                <div>
+                    <input class="form-control" type="password" th:field="*{password}" id="password"/>
+                </div>
+            </div>
+            <div>
+                <label for="passwordconfirm">Password confirm: </label>
+                <div>
+                    <input class="form-control" type="password" th:field="*{passwordConfirm}" id="passwordconfirm"/>
+                </div>
+            </div>
+            <div>
+                <label for="confirm">Create admin user</label>
+                <input type="checkbox" id="confirm" th:name="confirm" th:checked="*{confirm}"/>
+            </div>
+            <div>
+                <label for="roles">Role</label>
+                <div>
+                    <select id="roles" size="2" class="form-control"  multiple>
+                    <option selected value="ADMIN">ADMIN</option>
+                    <option value="2">USER</option>
+                    </select>
+                </div>
+            </div>
+            <div>
+                <input type="submit" value="Add user"/>
+            </div>
+        </div>
+    </form>
+</div>
     <p><span th:text="${userIsExist}">User is exist</span></p>
     <p><span th:text="${formError}">Form filling error</span></p>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+            crossorigin="anonymous">
 </body>
 </html>
