--- a/src/main/resources/templates/userdetails.html
+++ b/src/main/resources/templates/userdetails.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>User details</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+          crossorigin="anonymous">
 </head>
 <body>
+<div th:insert="logoutnav:: navbar (${user.getUserEmailWithRoles()})"></div>
 <div th:object="${user}">
     <p>Your first name: <span th:text="*{firstName}">First name</span></p>
     <p>Your last name: <span th:text="*{lastName}">First name</span></p>
@@ -19,6 +23,8 @@
 </div>
 <br/>
 <div th:insert="~{logoutfragment :: logout}"></div>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous">
 </body>
 </html>
