--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -4,8 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>All users page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+          crossorigin="anonymous">
 </head>
 <body>
+<div th:insert="logoutnav:: navbar (${user.getUserEmailWithRoles()})"></div>
 <div>
     <table>
         <thead>
@@ -45,6 +49,9 @@
     </form>
 </div>
 <br/>
-<div th:insert="~{logoutfragment :: logout}"></div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous">
 </body>
 </html>
