--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,20 +3,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Login</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+          crossorigin="anonymous">
 </head>
-<body>
-<div>
-    <form th:method="POST" th:action="@{/login}">
-        <input type="text" name="j_username"/>
-        <input type="password" name="j_password"/>
-        <input type="submit"/>
+<body background="#f8f9fa">
+<div class="container text-center mt-5" style="height: 300px" >
+    <form th:method="POST" th:action="@{/login}" style="max-width: 300px; margin: 0 auto;">
+        <div class="text-start">
+            <h1>Please sign in</h1>
+        </div>
+        <div>
+            <input class="form-control" type="text" name="j_username" placeholder="Email address"/>
+        </div>
+        <div>
+            <input class="form-control" type="password" name="j_password" placeholder="Password"/>
+        </div>
+        <div class="mt-2">
+            <button type="submit" class="btn btn-primary form-control">Sign in</button>
+        </div>
     </form>
 </div>
-<div>
-    <form action="/registration" method="get">
-        <input type="submit" value="Registration" />
-    </form>
-</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous">
 </body>
 </html>
