--- a/src/main/resources/templates/logoutnav.html
+++ b/src/main/resources/templates/logoutnav.html
@@ -6,10 +6,10 @@
         <div class="container-fluid"  >
             <span class="navbar-brand mb-0 h1" th:text="${user}"></span>
         </div>
-        <div class="container text-end navbar-collapse " id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
+        <div class="container navbar-collapse " id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
+                    <a class="nav-link active" style="color: darkgray" aria-current="page" href="/logout">Logout</a>
                 </li>
             </ul>
         </div>
