--- a/src/main/resources/templates/logoutnav.html
+++ b/src/main/resources/templates/logoutnav.html
@@ -9,7 +9,7 @@
         <div class="container navbar-collapse " id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" style="color: darkgray" aria-current="page" href="/logout">Logout</a>
+                    <a class="nav-link active" style="color: darkgray" href="/logout">Logout</a>
                 </li>
             </ul>
         </div>
