--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -29,9 +29,15 @@
                 </div>
             </div>
             <div>
+                <label for="age">Age: </label>
+                <div>
+                    <input class="form-control" type="number" th:field="*{age}" id="age"/>
+                </div>
+            </div>
+            <div>
                 <label for="email">E-mail: </label>
                 <div>
-                    <input class="form-control" type="text" th:field="*{email}" id="email"/>
+                    <input class="form-control" type="email" th:field="*{email}" id="email"/>
                 </div>
             </div>
             <div>
