--- a/src/main/resources/templates/userdetails.html
+++ b/src/main/resources/templates/userdetails.html
@@ -16,11 +16,11 @@
         <div class="col-1 p-0">
             <div th:each="role : ${user.roles}">
                 <form class="w-100"  th:action="@{/admin}" th:method="get" th:if="${role.getName().equals('ROLE_ADMIN')}">
-                    <button class="btn form-control text-start" style="color: #007bff" type="submit">Admin</button>
+                    <button class="btn btn-outline-primary form-control text-start border border-0" style="background: white; color: #0d6efd" type="submit">Admin</button>
                 </form>
             </div>
             <form class="w-100"  th:action="@{/userdetails}" th:method="get">
-                <button class="btn btn-primary form-control text-start" type="submit">User</button>
+                <button class="btn btn-primary form-control text-start " type="submit">User</button>
             </form>
         </div>
         <div class="col-11" style="background: #f8f9fa">
@@ -51,6 +51,6 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous">
+        crossorigin="anonymous"></script>
 </body>
 </html>
