--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -10,50 +10,156 @@
 </head>
 <body>
 <div th:insert="logoutnav:: navbar (${user.getUserEmailWithRoles()})"></div>
-<div>
-    <table>
-        <thead>
-        <tr>
-            <td>First name</td>
-            <td>Last name</td>
-            <td>E-mail</td>
-            <td>User actions</td>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:if="${users.isEmpty()}">
-            <td colspan="3">No Users in database</td>
-        </tr>
-        <tr th:each="user : ${users}">
-            <td><span th:text="${user.getFirstName()}">First name</span></td>
-            <td><span th:text="${user.getLastName()}">LastName</span></td>
-            <td><span th:text="${user.getEmail()}">E-mail</span></td>
-            <td>
-                <form th:method="GET" th:action="@{/admin/{id}/edit(id=${user.getId()})}">
-                <input type="submit" value="edit" />
+<div class="container-fluid" style="height: 100vh">
+    <div class="row h-100">
+        <div class="col-1 p-0">
+            <div th:each="role : ${user.roles}">
+                <form class="w-100"  th:action="@{/admin}" th:method="get" th:if="${role.getName().equals('ROLE_ADMIN')}">
+                    <button class="btn btn-primary form-control text-start"  type="submit">Admin</button>
                 </form>
-                <form th:method="DELETE" th:action="@{/admin/{id}(id=${user.getId()})}">
-                    <input type="submit" value="delete" />
-                </form>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-</div>
-<div>
-    <form method="get" action="/admin/new">
-        <input type="submit" value="Add new user">
-    </form>
-</div>
-<div>
-    <form method="get" action="/userdetails">
-        <input type="submit" value="My user details">
-    </form>
-</div>
-<br/>
+            </div>
+            <form class="w-100"  th:action="@{/userdetails}" th:method="get">
+                <button class="btn form-control text-start" style="color: #007bff" type="submit">User</button>
+            </form>
+        </div>
+    <div class="col-11 h-100" style="background: #f8f9fa">
+        <div class="container-fluid">
+            <div class="row">
+                <h1>Admin panel</h1>
+            </div>
+            <div class="row">
+                <div class="col p-0">
+                    <nav>
+                        <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                            <button class="nav-link active" id="nav-userstable-tab"
+                                    data-bs-toggle="tab" data-bs-target="#nav-userstable"
+                                    type="button" role="tab"
+                                    aria-controls="nav-userstable" aria-selected="true">Users table
+                            </button>
+                            <button class="nav-link" id="nav-newuser-tab"
+                                    data-bs-toggle="tab" data-bs-target="#nav-newuser"
+                                    type="button" role="tab"
+                                    aria-controls="nav-newuser" aria-selected="false">New user
+                            </button>
+                        </div>
+                    </nav>
+                    <div class="tab-content border p-3" id="nav-tabContent" style="background: white">
+                        <div class="tab-pane fade show active" id="nav-userstable" role="tabpanel"
+                             aria-labelledby="nav-userstable-tab" >
+                            <table class="table table-striped">
+                                <thead>
+                                <tr>
+                                    <td>ID</td>
+                                    <td>First Name</td>
+                                    <td>Last Name</td>
+                                    <td>Age</td>
+                                    <td>E-mail</td>
+                                    <td>Role</td>
+                                    <td>Edit</td>
+                                    <td>Delete</td>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr th:if="${users.isEmpty()}">
+                                    <td colspan="8">No Users in database</td>
+                                </tr>
+                                <tr th:each="user : ${users}">
+                                    <td><span th:text="${user.getId()}">ID</span></td>
+                                    <td><span th:text="${user.getFirstName()}">First name</span></td>
+                                    <td><span th:text="${user.getLastName()}">LastName</span></td>
+                                    <td><span th:text="${user.getAge()}">Age</span></td>
+                                    <td><span th:text="${user.getEmail()}">E-mail</span></td>
+                                    <td><span th:text="${user.getRolesString()}"></span></td>
+                                    <td>
+                                        <form th:method="GET" th:action="@{/admin/{id}/edit(id=${user.getId()})}">
+                                            <input type="submit" value="edit"/>
+                                        </form>
 
+                                    </td>
+                                    <td>
+                                        <form th:method="DELETE" th:action="@{/admin/{id}(id=${user.getId()})}">
+                                            <input type="submit" value="delete"/>
+                                        </form>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="tab-pane fade" id="nav-newuser" role="tabpanel" aria-labelledby="nav-newuser-tab">
+                            <div class="container text-center">
+                                <form th:method="POST" th:action="@{/admin}" th:object="${newUser}"
+                                      style="max-width: 300px; margin: 0 auto;">
+                                    <div class="m-3">
+                                        <div>
+                                            <label for="name">First name: </label>
+                                            <div>
+                                                <input class="form-control" type="text" th:field="*{firstName}" id="name"/>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <label for="lastname">Last name: </label>
+                                            <div>
+                                                <input class="form-control" type="text" th:field="*{lastName}" id="lastname"/>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <label for="age">Age: </label>
+                                            <div>
+                                                <input class="form-control" type="number" th:field="*{age}" id="age"/>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <label for="email">E-mail: </label>
+                                            <div>
+                                                <input class="form-control" type="email" th:field="*{email}" id="email"/>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <label for="username">Username: </label>
+                                            <div>
+                                                <input class="form-control" type="text" th:field="*{username}" id="username"/>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <label for="password">Password: </label>
+                                            <div>
+                                                <input class="form-control" type="password" th:field="*{password}" id="password"/>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <label for="passwordconfirm">Password confirm: </label>
+                                            <div>
+                                                <input class="form-control" type="password" th:field="*{passwordConfirm}" id="passwordconfirm"/>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <label for="confirm">Create admin user</label>
+                                            <input type="checkbox" id="confirm" th:name="confirm" th:checked="*{confirm}"/>
+                                        </div>
+                                        <div>
+                                            <label for="roles">Role</label>
+                                            <div>
+                                                <select id="roles" size="2" class="form-control"  multiple>
+                                                    <option selected value="ADMIN">ADMIN</option>
+                                                    <option value="2">USER</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <input type="submit" value="Add user"/>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous">
+        crossorigin="anonymous"></script>
 </body>
 </html>
