Spring bootstrap version 0.5

--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -12,7 +12,20 @@
 <div class="container-fluid" style="height: 100vh">
     <div class="row h-100">
         <div class="col-1">col-1</div>
-        <div class="col-11" style="background: #f8f9fa">col-11</div>
+        <div class="col-11" style="background: #f8f9fa">
+            <div class="row">
+                <div class="container-fluid">
+                    <div class="col">
+                        col-11
+                    </div>
+                    <div class="row">
+                        <div class="col" style="background: white">
+                            egerdfg
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
