--- a/src/main/resources/templates/userdetails.html
+++ b/src/main/resources/templates/userdetails.html
@@ -24,28 +24,48 @@
             </form>
         </div>
         <div class="col-11" style="background: #f8f9fa">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <td>ID</td>
-                        <td>First Name</td>
-                        <td>Last Name</td>
-                        <td>Age</td>
-                        <td>E-mail</td>
-                        <td>Role</td>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td><span th:text="*{id}">ID</span></td>
-                        <td><span th:text="*{firstName}">First Name</span></td>
-                        <td><span th:text="*{lastName}">Last Name</span></td>
-                        <td><span th:text="*{age}">Age</span></td>
-                        <td><span th:text="*{email}">E-mail</span></td>
-                        <td><span th:text="${user.getRolesString()}">Role</span></td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="row">
+                <div class="col">
+                    <h1>User information-page</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="container-fluid p-0 border ">
+                        <div class="row m-0">
+                            <div class="col p-3">
+                                <h6 class="mb-0">About user</h6>
+                            </div>
+                        </div>
+                        <div class="row m-0" style="background: white">
+                            <div class="col p-3">
+                                <table class="table table-striped">
+                                    <thead>
+                                    <tr>
+                                        <td>ID</td>
+                                        <td>First Name</td>
+                                        <td>Last Name</td>
+                                        <td>Age</td>
+                                        <td>E-mail</td>
+                                        <td>Role</td>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr>
+                                        <td><span th:text="*{id}">ID</span></td>
+                                        <td><span th:text="*{firstName}">First Name</span></td>
+                                        <td><span th:text="*{lastName}">Last Name</span></td>
+                                        <td><span th:text="*{age}">Age</span></td>
+                                        <td><span th:text="*{email}">E-mail</span></td>
+                                        <td><span th:text="${user.getRolesString()}">Role</span></td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
