--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,19 +9,15 @@
           rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
           crossorigin="anonymous">
 </head>
-<body>
-<div>
-    <h1>Welcome to BoxUser site</h1>
-</div>
-<div>
-    <form method="get" action="/login">
-        <input type="submit" value="Login" />
-    </form>
-</div>
-<div>
-    <form method="get" action="/registration">
-        <input type="submit" value="Registration" />
-    </form>
+<body background="#f8f9fa">
+<div class="container text-center">
+        <h1 class="mb-3">Welcome to BoxUser site</h1>
+        <form method="get" action="/login" style="max-width: 300px; margin: auto">
+            <input class="btn btn-primary form-control mt-2" type="submit" value="Login"/>
+        </form>
+        <form method="get" action="/registration" style="max-width: 300px; margin: auto">
+            <input type="submit" class="btn btn-success form-control mt-2" value="Registration"/>
+        </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
