--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -59,15 +59,11 @@
                 </div>
             </div>
             <div>
-                <label for="confirm">Create admin user</label>
-                <input type="checkbox" id="confirm" th:name="confirm" th:checked="*{confirm}"/>
-            </div>
-            <div>
                 <label for="roles">Role</label>
                 <div>
-                    <select id="roles" size="2" class="form-control"  multiple>
+                    <select id="roles" size="2" class="form-control" multiple th:field="*{confirm}">
                     <option selected value="ADMIN">ADMIN</option>
-                    <option value="2">USER</option>
+                    <option value="">USER</option>
                     </select>
                 </div>
             </div>
@@ -76,9 +72,10 @@
             </div>
         </div>
     </form>
-</div>
     <p><span th:text="${userIsExist}">User is exist</span></p>
     <p><span th:text="${formError}">Form filling error</span></p>
+</div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
             crossorigin="anonymous">
