--- a/src/main/resources/templates/userdetails.html
+++ b/src/main/resources/templates/userdetails.html
@@ -23,7 +23,7 @@
                 <button class="btn btn-primary form-control text-start " type="submit">User</button>
             </form>
         </div>
-        <div class="col-11" style="background: #f8f9fa">
+        <div class="col-11 px-4 py-3" style="background: #f8f9fa">
             <div class="row">
                 <div class="col">
                     <h1>User information-page</h1>
@@ -39,15 +39,16 @@
                         </div>
                         <div class="row m-0" style="background: white">
                             <div class="col p-3">
-                                <table class="table table-striped">
+                                <table class="align-middle border-top table table-striped table-borderless">
                                     <thead>
                                     <tr>
-                                        <td>ID</td>
-                                        <td>First Name</td>
-                                        <td>Last Name</td>
-                                        <td>Age</td>
-                                        <td>E-mail</td>
-                                        <td>Role</td>
+                                        <th>ID</th>
+                                        <th>First Name</th>
+                                        <th>Last Name</th>
+                                        <th>Age</th>
+                                        <th>E-mail</th>
+                                        <th>Username</th>
+                                        <th>Role</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -57,6 +58,7 @@
                                         <td><span th:text="*{lastName}">Last Name</span></td>
                                         <td><span th:text="*{age}">Age</span></td>
                                         <td><span th:text="*{email}">E-mail</span></td>
+                                        <td><span th:text="*{username}"></span></td>
                                         <td><span th:text="${user.getRolesString()}">Role</span></td>
                                     </tr>
                                     </tbody>
