--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -70,38 +70,38 @@
                                             </tr>
                                             </thead>
                                             <tbody>
-                                            <tr th:if="${users.isEmpty()}">
-                                                <td colspan="8">No Users in database</td>
-                                            </tr>
-                                            <tr th:each="userFromDB : ${users}">
-                                                <td><span th:text="${userFromDB.getId()}">ID</span></td>
-                                                <td><span th:text="${userFromDB.getFirstName()}">First name</span></td>
-                                                <td><span th:text="${userFromDB.getLastName()}">LastName</span></td>
-                                                <td><span th:text="${userFromDB.getAge()}">Age</span></td>
-                                                <td><span th:text="${userFromDB.getEmail()}">E-mail</span></td>
-                                                <td><span th:text="${userFromDB.getUsername()}"></span></td>
-                                                <td><span th:text="${userFromDB.getRolesString()}"></span></td>
-                                                <td id="edit">
-                                                    <div>
-                                                        <button th:id="${userFromDB.getId()}" type="button" class="btn btn-secondary"
-                                                                data-bs-toggle="modal"
-                                                                data-bs-target="#modalWin"
-                                                                >
-                                                            Edit
-                                                        </button>
-                                                    </div>
-                                                </td>
-                                                <td id="delete">
-                                                    <div>
-                                                        <button type="button" class="btn btn-danger"
-                                                                data-bs-toggle="modal"
-                                                                data-bs-target="#modalWin"
-                                                                th:id="${userFromDB.getId()}">
-                                                            Delete
-                                                        </button>
-                                                    </div>
-                                                </td>
-                                            </tr>
+<!--                                            <tr th:if="${users.isEmpty()}">-->
+<!--                                                <td colspan="8">No Users in database</td>-->
+<!--                                            </tr>-->
+<!--                                            <tr th:each="userFromDB : ${users}" th:id="'tr'+${userFromDB.getId()}">-->
+<!--                                                <td><span th:text="${userFromDB.getId()}">ID</span></td>-->
+<!--                                                <td><span th:text="${userFromDB.getFirstName()}">First name</span></td>-->
+<!--                                                <td><span th:text="${userFromDB.getLastName()}">LastName</span></td>-->
+<!--                                                <td><span th:text="${userFromDB.getAge()}">Age</span></td>-->
+<!--                                                <td><span th:text="${userFromDB.getEmail()}">E-mail</span></td>-->
+<!--                                                <td><span th:text="${userFromDB.getUsername()}"></span></td>-->
+<!--                                                <td><span th:text="${userFromDB.getRolesString()}"></span></td>-->
+<!--                                                <td id="edit">-->
+<!--                                                    <div>-->
+<!--                                                        <button th:id="${userFromDB.getId()}" type="button" class="btn btn-secondary"-->
+<!--                                                                data-bs-toggle="modal"-->
+<!--                                                                data-bs-target="#modalWin"-->
+<!--                                                                >-->
+<!--                                                            Edit-->
+<!--                                                        </button>-->
+<!--                                                    </div>-->
+<!--                                                </td>-->
+<!--                                                <td id="delete">-->
+<!--                                                    <div>-->
+<!--                                                        <button type="button" class="btn btn-danger"-->
+<!--                                                                data-bs-toggle="modal"-->
+<!--                                                                data-bs-target="#modalWin"-->
+<!--                                                                th:id="${userFromDB.getId()}">-->
+<!--                                                            Delete-->
+<!--                                                        </button>-->
+<!--                                                    </div>-->
+<!--                                                </td>-->
+<!--                                            </tr>-->
                                             </tbody>
                                         </table>
                                     </div>
@@ -206,7 +206,7 @@
      aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form method="POST">
+            <form id="modalForm" method="POST">
                 <input id="method" type="hidden" name="_method" value="PATCH">
                 <div class="modal-header">
                     <h5 class="modal-title"
@@ -304,7 +304,7 @@
         </div>
     </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
