--- a/src/main/resources/templates/userdetails.html
+++ b/src/main/resources/templates/userdetails.html
@@ -52,15 +52,7 @@
                                     </tr>
                                     </thead>
                                     <tbody>
-                                    <tr>
-                                        <td><span th:text="*{id}">ID</span></td>
-                                        <td><span th:text="*{firstName}">First Name</span></td>
-                                        <td><span th:text="*{lastName}">Last Name</span></td>
-                                        <td><span th:text="*{age}">Age</span></td>
-                                        <td><span th:text="*{email}">E-mail</span></td>
-                                        <td><span th:text="*{username}"></span></td>
-                                        <td><span th:text="${user.getRolesString()}">Role</span></td>
-                                    </tr>
+
                                     </tbody>
                                 </table>
                             </div>
@@ -71,9 +63,10 @@
         </div>
     </div>
 </div>
-
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
+<script src="js/user.js"></script>
 </body>
 </html>
