Spring jquery version 1

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -193,7 +193,7 @@
                             </div>
                         </div>
                         <div>
-                            <label for="name"><b>Enter name</b></label>
+                            <label for="firstName"><b>Enter name</b></label>
                             <div>
                                 <input type="text"
                                        th:name="firstName"
