Spring script version 1.4

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -63,6 +63,7 @@
                 <div>
                     <input class="form-control" type="password" th:field="*{passwordConfirm}" id="passwordconfirm"/>
                 </div>
+                <div><span th:text="${matchPassword}"></span></div>
             </div>
             <div>
                 <label for="roles">Role</label>
